corected gradle - fixed issue JAVA 1.9